[project]
name = "clap-vtt"
version = "0.1.0"
description = "Generate descriptive WebVTT caption files from audio or video recordings using [CLAP](https://github.com/LAION-AI/CLAP) (Contrastive Language-Audio Pretraining). Instead of transcribing speech, it classifies what is *happening* in the audio — instruments playing, crowd noise, announcer speech, silence — based on natural-language labels you define."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argparse>=1.4.0",
    "librosa>=0.11.0",
    "numpy>=2.4.4",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "soundfile>=0.12.1",
]
